<resources>
    <string name="app_name">CUCanteen</string>
    <string name="titile">See you happy CUCanteen</string>
    <string name="CUCanteen">CUCanteen</string>
    <string name="arrow">arrow</string>
    <string name="buttonStart">เริ่มต้น</string>
    <string name="OR">หรือ</string>
    <string name="signin"><u>ลงชื่อเข้าใช้</u></string>
    <string name="help"><u>ต้องการความช่วยเหลือ?</u></string>
    <string name="choose">ต้องการเข้าใช้งานในฐานะ</string>
    <string name="sellerpic">sellerpic</string>
    <string name="customerpic">customerpic</string>
    <string name="Restaurant">ร้านค้า</string>
    <string name="Customer">ลูกค้า</string>
    <string name="buttonOperation">ดำเนินการต่อ</string>
    <string name="tittle1"><u>เมื่อกด “ดำเนินการต่อ” หมายถึง คุณได้ยอมรับข้อกำหนด นโยบายความเป็นส่วนตัว</u></string>
    <string name="tittle2"><u>และนโยบายคุกกี้ทั้งหมดของเรา</u></string>


    <string name="DailyMenu">เมนูประจำวัน</string>
    <string name="search_bg">search_bg</string>
    <string name="SearchMenu">ค้นหาเมนู</string>
    <string name="food">food</string>
    <string name="clean">clean</string>
    <string name="halal">halal</string>
    <string name="bakery">bakery</string>
    <string name="อาหาร">อาหาร</string>
    <string name="เครื่องดื่ม">เครื่องดื่ม</string>
    <string name="คลีน">คลีน</string>
    <string name="ฮาลาล">ฮาลาล</string>
    <string name="อื่นๆ">อื่นๆ</string>
    <string name="รายการโปรด">รายการโปรด</string>
    <string name="เลือกจากโรงอาหารรอบจุฬาฯ">เลือกจากโรงอาหารรอบจุฬาฯ</string>

    <string name="Menu">เมนูอาหาร</string>
    <string name="plus">plus</string>
    <string name="AddMenu">กดเพื่อเพิ่มเมนู</string>

    <string name="picture">picture</string>

</resources>